- Info Screen (F9)
	Projects List
		Hover shows project instead of building; click goes to correct Civilopedia entry
		Completed projects no longer show an invalid date or city name
- MapFinder
	Status panel title displays correctly
- Unit Naming
	Default naming convention matches new unit counting codes
- Logger
	Suppresses the nationality of rival Privateers


MODDING

New Features:

- DiplomacyUtil
	Added canContact() and isWillingToTalk()
- ReligionUtil
	Makes adding religions and new types of religious buildings/units to the Religion Advisor a snap

Improvements:

- BugGameUtils
	Each callback's dispatch logging is now optional via "log" XML attribute
- GameUtil
	Added checks for more game options used by diplomacy/trade changes
- GPUtil
	Added specific instructions for adding new GP types
- TradeUtil
	Added functions to get lists of valid trading partners for the different tradable items

Bug Fixes:

- BugPath ignores CustomAssets folder when running as a Mod; too many issues


____________________________________________________________________________________________________
BUG 4.0 released August 16, 2009

CHANGES

	*** BULL: The BUG DLL ***
	
	This is an optional component that, once installed, enables the features listed below marked [BULL].
	Any features that don't require BUG are not listed here. Refer to BULL's changelog for more information.

New Features:

- Regenerate map shortcut (ALT + G) [BULL]
- MapFinder from HOF Mod: ALT + CTRL + G to start/stop [BULL]
- Advanced Scoreboard
	Refuses to Talk (F) [BULL]
	Number of Cities (Q)
- Production Decay [BULL]
	A yellow ! means an item in the build queue will start to decay after 5 turns of non-production
	A red !! means an item will decay this turn
	Hover for units/buildings shows actual decay amount and turns until it starts 
- Info Screen (F9)
	New expanded Wonders tab by DanF5771
		Shows constructed items (all known rivals)
		Shows items being built (must have enough EPs for City Visibility)